--- a/αστερισμό/packages.config
+++ b/αστερισμό/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net452" />
   <package id="PInvoke.Kernel32" version="0.5.97" targetFramework="net452" />
   <package id="PInvoke.User32" version="0.5.97" targetFramework="net452" />
   <package id="PInvoke.Windows.Core" version="0.5.97" targetFramework="net452" />
