--- a/αστερισμό/αστερισμό.csproj
+++ b/αστερισμό/αστερισμό.csproj
@@ -33,7 +33,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>αστερισμό.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Hardcodet.Wpf.TaskbarNotification, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hardcodet.NotifyIcon.Wpf.1.0.8\lib\net451\Hardcodet.Wpf.TaskbarNotification.dll</HintPath>
+    </Reference>
     <Reference Include="PInvoke.Kernel32, Version=0.5.0.0, Culture=neutral, PublicKeyToken=9e300f9f87f04a7a, processorArchitecture=MSIL">
       <HintPath>..\packages\PInvoke.Kernel32.0.5.97\lib\net45\PInvoke.Kernel32.dll</HintPath>
     </Reference>
@@ -69,6 +75,20 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Box.cs" />
+    <Compile Include="IconDesignWindow.xaml.cs">
+      <DependentUpon>IconDesignWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SamLu\Combination.cs" />
+    <Compile Include="IUnidirectionalProvider.cs" />
+    <Compile Include="SamLu\Math.cs" />
+    <Compile Include="ShapeCenterMultiValueConvertor.cs" />
+    <Compile Include="ShapeCenterValueType.cs" />
+    <Compile Include="UnidirectionalAnimationTemplate.cs" />
+    <Page Include="IconDesignWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -108,6 +128,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="image\αστερισμό.png" />
+    <Resource Include="image\北斗七星.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="image\sample.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="αστερισμό.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
